# cookiecutter-rcmt

./: .gitignore  CHANGELOG.md  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: pull_request.yaml  release-please.yaml
hooks/: post_gen_project.py  pre_prompt.py
{{ cookiecutter.project_slug }}/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/tests/: __init__.py  test_example.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: example.py
