[tool.poetry]
name = "cookiecutter-rcmt"
version = "0.1.0"
description = ""
authors = ["Markus Meyer <hydrantanderwand@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cookiecutter = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
